
2010-01-22  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-initial-timeline-spec-string):
	Change value to ":home" from ":friends".

	* twittering-mode.el (twittering-status-to-status-datum): Don't
	refer to `twittering-use-native-retweet'.

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	Fix a reference to `mes' as a variable, not as a function.

2010-01-21  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el: Add a fail statement to work again under
	Emacs21 without Mule-UCS.
	(toplevel): Don't abort if require failed.
	(twittering-ucs-to-char): Return `?' explicitly if `decode-char'
	failed.

	* twittering-mode.el (twittering-get-tweets): Rename from
	`twittering-get-twits'.
	(twittering-get-and-render-timeline): Adjust callers.
	(twittering-new-tweets-hook): Fix a docstring.

2010-01-21  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-render-timeline): reduce
	redundant calls of `goto-char'.

	* twittering-mode.el (twittering-render-timeline): fix logic for
	inserting statuses not to duplicate the last status.

2010-01-20  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-get-default-sentinel): Show
	the reason phrase with status code if status code is not "200";
	same as `twittering-http-post-default-sentinel'.
	(twittering-http-get-list-index-sentinel): Likewise.

	* twittering-mode.el (twittering-http-status-line-regexp): New
	defconst to share this between several functions. The regexp
	pattern to obey to RFC 2616.
	(twittering-http-get-default-sentinel): Use it.
	(twittering-http-post-default-sentinel): Likewise.
	(twittering-http-get-list-index-sentinel): Likewise.

	* twittering-mode.el (twittering-tinyurl-get): Remove an
	unnecessary call to `concat'.

	* twittering-mode.el (twittering-update-jojo): Make a tweet by
	`twittering-ucs-to-char' instead of `string-as-multibyte'.

2010-01-19  Tadashi MATSUO  <tad@mymail.twin.jp>
